Evaluator now outputs detailed json eval results